--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,57 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/R"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="@string/title" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="horizontal"
+    android:background="@drawable/fundo"
+    android:gravity="center">
 
-    <ImageView
-        android:id="@+id/imageView1"
+    <TableLayout
+        android:id="@+id/conteudo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/fundo" />
+        android:stretchColumns="*"
+        android:background="#ff0000">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="150dp"
-        android:text="Nº Cartão :"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        <TableRow>
 
-    <TextView
-        android:id="@+id/numeroCartao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignTop="@+id/textView2"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@+id/textView2"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:paddingRight="5dp"
+                android:text="Nº Cartão :"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+            />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="20dp"
-        android:layout_toLeftOf="@+id/numeroCartao"
-        android:text="Saldo :"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+            <TextView
+                android:id="@+id/numeroCartao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@android:color/black"
+            />
 
-    <TextView
-        android:id="@+id/saldo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/numeroCartao"
-        android:layout_alignTop="@+id/textView1"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        </TableRow>
+        <TableRow>
 
-</RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_weight="1"
+                android:paddingRight="5dp"
+                android:text="Saldo :"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+            />
+
+            <TextView
+                android:id="@+id/saldo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@android:color/black"
+            />
+
+        </TableRow>
+
+    </TableLayout>
+
+</LinearLayout>
