--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,35 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/R"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
+    <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/layout"/>
+            android:padding="20dp"
+            android:background="@drawable/background_logo_gradient">
 
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/logo"/>
 
-    <TextView
-            android:id="@+id/numeroCartao"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_x="60dp"
-            android:layout_y="198dp"
-            android:textColor="@android:color/white"
-            android:textAppearance="?android:attr/textAppearanceMedium"/>
+    </LinearLayout>
 
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="20dp"
+            android:orientation="vertical"
+            android:background="@drawable/background_form_gradient">
 
-    <TextView
-            android:id="@+id/saldo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_x="60dp"
-            android:layout_y="303dp"
-            android:textColor="@android:color/white"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                style="@style/texto"
+                android:text="Cartão"/>
 
-</AbsoluteLayout>
+        <EditText
+                android:id="@+id/numeroCartao"
+                android:layout_width="fill_parent"
+                android:layout_height="40dp"
+                android:background="@drawable/rounded_edittext"
+                android:editable="false"/>
+
+        <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                style="@style/texto"
+                android:text="Saldo"/>
+
+        <EditText
+                android:id="@+id/saldo"
+                android:layout_width="fill_parent"
+                android:layout_height="40dp"
+                android:background="@drawable/rounded_edittext"
+                android:editable="false"/>
+
+    </LinearLayout>
+
+</LinearLayout>
