--- a/res/drawable-nodpi/rounded_edittext.xml
+++ b/res/drawable-nodpi/rounded_edittext.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle"
        android:padding="20dp">
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="#2c4760"/>
     <corners
             android:bottomRightRadius="20dp"
             android:bottomLeftRadius="20dp"
