--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,7 +8,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:background="@drawable/background_logo_gradient">
+            android:gravity="center"
+            android:background="@drawable/background_logo_gradient"
+            >
 
         <ImageView
                 android:layout_width="wrap_content"
@@ -32,10 +34,7 @@
 
         <EditText
                 android:id="@+id/numeroCartao"
-                android:layout_width="fill_parent"
-                android:layout_height="40dp"
-                android:background="@drawable/rounded_edittext"
-                android:editable="false"/>
+                style="@style/caixaDeTexto"/>
 
         <TextView
                 android:layout_width="fill_parent"
@@ -45,10 +44,7 @@
 
         <EditText
                 android:id="@+id/saldo"
-                android:layout_width="fill_parent"
-                android:layout_height="40dp"
-                android:background="@drawable/rounded_edittext"
-                android:editable="false"/>
+                style="@style/caixaDeTexto"/>
 
     </LinearLayout>
 
