--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -8,4 +8,14 @@
         <item name="android:textSize">20dp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="caixaDeTexto">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:background">@drawable/rounded_edittext</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:editable">false</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
 </resources>
